Lambda and docker fixes